--- a/Task_Portfolio.css
+++ b/Task_Portfolio.css
@@ -242,6 +242,7 @@
                     padding: 10px 20px;
                     border-radius: 20px;
                     font-weight: 600;
+                    border:1px solid black;
                     /* background-color: green; */
                 }
                 .intern{
