--- a/portfolio.css
+++ b/portfolio.css
@@ -9,14 +9,15 @@
                 font-weight: 400; 
                 line-height: 1.6;
                 overflow-x: hidden;
-                background-color: black;
+                background-color: #f7e9f3;;
                 color: white; 
             }
 
             .navbar {
                 display: flex;
                 justify-content: center; 
-                background-color: rgb(49, 49, 49);
+                /* background-color: rgb(49, 49, 49); */
+                background-color: white;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
                 padding: 20px 0; 
                 position: fixed; 
@@ -29,14 +30,14 @@
 
             .item {
                 text-decoration: none;
-                color: white;
+                color: black;
                 font-weight: 500; 
                 transition: color 0.3s ease, transform 0.3s ease;
                 padding: 10px 20px;
             }
             
             .item:hover {
-                color: green;
+                color: #6a1a7c;
                 transform: translateY(-2px);
             }
 
@@ -48,6 +49,7 @@
                 gap: 50px;
                 margin-top: 80px; 
                 flex-wrap: wrap;
+                background: linear-gradient(135deg, #fce4ec, #f06292);
             }
 
             .left, .right {
@@ -62,7 +64,7 @@
             }
 
             .left p:nth-child(1) {
-                color: green;
+                color: white;
                 text-transform: uppercase;
                 letter-spacing: 1px;
                 margin-bottom: 5px;
@@ -71,7 +73,7 @@
             .left h1 {
                 font-size: 3rem;
                 margin-bottom: 10px;
-                color: green;
+                color: #6a1a7c;
             }
 
             .left h2 {
@@ -97,6 +99,9 @@
                 color: white;
                 font-size: 1.8rem;
                 transition: color 0.3s;
+            }
+            .social-icons a:hover{
+                color: #6a1a7c;
             }
             .loc h6 {
                 padding-top: 20px;
@@ -159,7 +164,7 @@
             }
         
                     .s1 {
-                color: green;
+                color: #6a1a7c;
                 font-weight: 900;
                 padding: 10px;
                 position: relative; 
@@ -171,14 +176,15 @@
                 display: block; 
                 width: 80px;
                 height: 4px;
-                background-color: green; 
+                background-color: #6a1a7c; 
                 border-radius: 2px;
                 margin: 0 auto; 
             }
             .s2box{
 
                 margin-top: 40px;
-                background-color: rgb(49, 49, 49);
+                /* background-color: rgb(49, 49, 49); */
+                background-color: white;
                 width: 90%; 
                 max-width: 700px;
                 padding: 40px 30px;
@@ -186,10 +192,11 @@
                 transition: transform 0.4s ease, box-shadow 0.4s ease;
                 margin-left: auto;
                 margin-right: auto;
+                
         
                 }
                 .s2box h2{
-                    color: green;
+                    color: #6a1a7c;
                     padding-bottom: 20px;
                 }
                     .s2box:hover{
@@ -216,7 +223,8 @@
                     
                     }
                     .card1,.card2{
-                        background-color: rgb(49, 49, 49);
+                        /* background-color: rgb(49, 49, 49); */
+                        background-color: white;
                         width: 90%;
                         max-width: 500px;
                         height: auto;
@@ -224,6 +232,7 @@
                         padding: 30px;
                         line-height: 1.8rem;
                         transition: transform 0.4s ease, box-shadow 0.4s ease;
+                        color: black;
                     }
                 .card1:hover,.card2:hover{
                     transform: translateY(-10px);
@@ -231,10 +240,11 @@
                 }
                 .card1 h2,.card2 h2
                 {
-                    color:green;
+                    color:#6a1a7c;
                 }
                 .card1 p,.card2 p
                 {
+                    color: black;
                     margin-top: 8px;
                 }
                 .card1 button ,.card2 button{
@@ -242,8 +252,21 @@
                     padding: 10px 20px;
                     border-radius: 20px;
                     font-weight: 600;
-                    border: 1px solid black;
+                    border: 1px solid #6a1a7c;
                     /* background-color: green; */
+                }
+                .floating-link-btn {
+                    position: absolute;
+                    top: 20px;
+                    right: 20px;
+                    font-size: 1.5rem;
+                    color: #8a4799;
+                    transition: transform 0.3s ease, color 0.3s ease;
+                }
+
+                .floating-link-btn:hover {
+                    color: #6a1a7c; 
+                    transform: scale(1.1);
                 }
                 .intern{
                     margin-top: 60px;
@@ -253,7 +276,8 @@
                     align-items: center;
                 }
                 .internship-card {
-                    background-color: rgb(49, 49, 49);
+                    /* background-color: rgb(49, 49, 49); */
+                    background-color: white;
                     width: 90%;
                     max-width: 800px;
                     height: auto;
@@ -272,28 +296,16 @@
                 }
 
                 .internship-card h3{
-                    color: green;
+                    color: #6a1a7c;
                     padding-bottom: 10px;
                     font-size: 1.8rem;
                 }
 
                 .internship-card p {
-                    color: white;
+                    color: black;
                 }
  
-                .floating-link-btn {
-                    position: absolute;
-                    top: 20px;
-                    right: 20px;
-                    font-size: 1.5rem;
-                    color: #4F6F52;
-                    transition: transform 0.3s ease, color 0.3s ease;
-                }
-
-                .floating-link-btn:hover {
-                    color: green; 
-                    transform: scale(1.1);
-                }
+                
               
                             .certibtn {
                 display: flex;
@@ -307,7 +319,7 @@
             width: 150px;
             height: auto;
             border-radius: 25px;
-            background-color: green;
+            background-color: #6a1a7c;
             color: white;
             text-align: center;
             font-weight: bold;
@@ -318,7 +330,7 @@
         .certibtn a:hover {
             transform: translateY(-2px);
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
-            background-color: #4CAF50; /* A lighter green for the hover effect */
+            background-color: #8a4799; /* A lighter green for the hover effect */
         }
         .certibtn a:active {
             transform: translateY(0);
@@ -331,7 +343,7 @@
                         right: 0;
                         width: 50px;
                         height: 50px;
-                        background-color: green;
+                        background-color: #6a1a7c;
                         border-bottom-left-radius: 15px;
                     }
                     .internship-card::after {
@@ -341,7 +353,7 @@
                         left: 0;
                         width: 50px;
                         height: 50px;
-                        background-color: green;
+                        background-color: #6a1a7c;
                         border-top-right-radius: 15px;
                     }
                     .achievements {
@@ -354,7 +366,8 @@
                         padding: 20px;
                     }
                     .achievement-card {
-                        background-color: rgb(49, 49, 49);
+                        /* background-color: rgb(49, 49, 49); */
+                        background-color: white;
                         width: 250px;
                         height: 250px;
                         display: flex;
@@ -362,18 +375,19 @@
                         align-items: center;
                         text-align: center;
                         padding: 20px;
-                        position: relative;
+                        position: relative; 
+                        border-left: 5px solid #6a1a7c;
                         clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
                     }
                     .achievement-card p {
-                        color: white;
+                        color: black;
                         font-size: 1.1rem;
                         line-height: 1.6;
                         position: relative;
                         z-index: 2;
                     }
                     .achievement-card p strong {
-                        color: green;
+                        color: #6a1a7c;
                         font-weight: 600;
                     }
                     .certifications{
@@ -381,15 +395,18 @@
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
-                        align-items: center;    
+                        align-items: center;  
+                          
                     }
                     .cert-card{
                         margin-top: 10px;
-                        background-color: rgb(49, 49, 49);
+                        /* background-color: rgb(49, 49, 49); */
+                        background-color: white;
                         width: 50%; 
                         max-width: 700px;
                         padding: 30px 30px;
-                        border-left: 5px solid green;
+                        color: black;
+                        border-left: 5px solid #6a1a7c;
                     }
                     .edu{
                         display: flex;
@@ -398,9 +415,13 @@
                         align-items: center;
                         margin-top: 60px;
                         margin-bottom: 100px;
+                        color: black;
                     }
                     footer{
-                        background-color: rgb(49, 49, 49);
+                        /* background-color: rgb(49, 49, 49); */
+                        background-color: white;
+                        color: black;
+                        font-weight: 600;
                         text-align: center;
                         padding: 40px;
 
