--- a/portfolio.css
+++ b/portfolio.css
@@ -553,6 +553,7 @@
                             font-weight: 600;
                             text-align: center;
                             padding: 40px;
+                            font-size:25px;
 
                         }
                         .divv div[id] {
